--- a/vuexlearn/package.json
+++ b/vuexlearn/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "element-ui": "^2.15.5",
+    "lodash": "^4.17.21",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.2.0"
